размечен header footer и часть index

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,8 +1,35 @@
-body { background:red;} 
+@import 'additional-goods.less';
+@import 'catalog.less';
+@import 'catalog-promo.less';
+@import 'developers.less';
+@import 'example.less';
+@import 'extra.less';
+@import 'form-cat-info.less';
+@import 'form-contacts.less';
+@import 'form-targets.less';
+@import 'page-catalog.less';
+@import 'page-footer.less';
+@import 'page-form.less';
+@import 'page-header.less';
+@import 'page-main.less';
+@import 'partnership.less';
+@import 'main-nav.less';
+@import 'product-description.less';
+@import 'product-description.less';
+@import 'promo.less';
+@import 'result-item.less';
+@import 'selection.less';
+@import 'social.less';
+@import 'table.less';
+@import 'targets.less';
+@import 'mixins.less';
+@import 'variables.less';
 
-@import 'page-header/page-header.less';
-@import 'page-header/page-header__logo/page-header__logo.less';
-@import 'page-header/page-header__nav/page-header__nav.less';
-@import 'page-header/main-nav/main-nav.less';
-@import 'page-header/main-nav/main-nav__list/main-nav__list.less';
-@import 'page-header/main-nav/main-nav__item/main-nav__item.less';
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+
+  clip: rect(0, 0, 0, 0);
+}
