закончена верстка флекс блоков  index

--- a/source/less/page-footer.less
+++ b/source/less/page-footer.less
@@ -1,6 +1,5 @@
 .page-footer__wrapper  {
-    width: 280px;
-    padding:0 20px;
+    width: 320px;
     margin: 0 auto;
 }
 
@@ -62,4 +61,11 @@
         display: flex;
         justify-content: space-between; 
     }
+}
+
+.page-footer__logo{
+    display:block;
+    margin:0 auto;
+    height: 25px;
+    width:129px;
 }
