--- a/source/less/partnership.less
+++ b/source/less/partnership.less
@@ -1,6 +1,5 @@
 .partnership {
     width: 280px;
-    padding:0 20px;
     margin: 0 auto;
 }
 
@@ -17,4 +16,10 @@
     padding:0 40px;
     margin: 0 auto;
   }
+}
+.partnership__header{
+    .mp;
+    min-height:115px;
+    display:flex;
+    justify-content: space-between;
 }
