--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -31,11 +31,7 @@
     margin:0 auto;
     padding-top:20px;
 }
-.example__before{
-    display: block;
-}
-.example__after{
-    display:none;
-}
+.example__before{ display: block;}
+.example__after { display:none;}
 #pic_sw:checked ~ .example__before{ display: none;}
 #pic_sw:checked ~ .example__after{ display: block;}
