--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,29 +1,29 @@
-@import 'additional-goods.less';
-@import 'catalog.less';
-@import 'catalog-promo.less';
-@import 'developers.less';
-@import 'example.less';
-@import 'extra.less';
-@import 'form-cat-info.less';
-@import 'form-contacts.less';
-@import 'form-targets.less';
-@import 'page-catalog.less';
-@import 'page-footer.less';
-@import 'page-form.less';
-@import 'page-header.less';
-@import 'page-main.less';
-@import 'partnership.less';
-@import 'main-nav.less';
-@import 'product-description.less';
-@import 'product-description.less';
-@import 'promo.less';
-@import 'result-item.less';
-@import 'selection.less';
-@import 'social.less';
-@import 'table.less';
-@import 'targets.less';
 @import 'mixins.less';
 @import 'variables.less';
+@import 'blocks/additional-goods.less';
+@import 'blocks/catalog.less';
+@import 'blocks/catalog-promo.less';
+@import 'blocks/developers.less';
+@import 'blocks/example.less';
+@import 'blocks/extra.less';
+@import 'blocks/form-cat-info.less';
+@import 'blocks/form-contacts.less';
+@import 'blocks/form-targets.less';
+@import 'blocks/page-catalog.less';
+@import 'blocks/page-footer.less';
+@import 'blocks/page-form.less';
+@import 'blocks/page-header.less';
+@import 'blocks/page-main.less';
+@import 'blocks/partnership.less';
+@import 'blocks/main-nav.less';
+@import 'blocks/product-description.less';
+@import 'blocks/promo.less';
+@import 'blocks/result-item.less';
+@import 'blocks/selection.less';
+@import 'blocks/social.less';
+@import 'blocks/table.less';
+@import 'blocks/targets.less';
+
 
 .visually-hidden {
   position: absolute;
