--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -2,12 +2,11 @@
     display:flex;
     flex-wrap: wrap;
     min-height: 210px;
-}
-@media (min-width: @tablet-width){
-    .catalog__item {
+
+    @media (min-width: @tablet-width) {
+    
         width:324px;
         min-height: 530px;
-        display: flex;
         flex-direction: column;
         align-items: center;
         margin-right:60px;
@@ -15,42 +14,50 @@
         margin-bottom: 20px;
         
     }
-    .catalog__item:nth-child(2n) {
-        margin-right:0;
-    }
     
-}
-@media (min-width: @desktop-width){
-    .catalog__item{
+    @media (min-width: @desktop-width) {
+   
         width:245px;
         min-height: 530px;
         margin-bottom: 48px;
         margin-right: 80px;
-    }
+    }    
+}
     .catalog__item:nth-child(2n) {
-        margin-right:80px;
+        @media (min-width: @tablet-width) {
+          margin-right:0;
+        }
+        @media (min-width: @desktop-width) {
+          margin-right:80px;  
+        }
     }
+    
     .catalog__item:nth-child(4n) {
+        @media (min-width: @desktop-width) {
         margin-right:0;
     }
 }
 
-
-
-.catalog__link , .catalog__wrapper {
+.catalog__link , 
+.catalog__wrapper {
     width: 140px;
 }
+
 .catalog__wrapper{
     display: flex;
     flex-direction: column;
 }
-.catalog__item h3 , catalog__table,{
+
+.catalog__item h3, 
+catalog__table, {
     .mp;
 }
+
 .catalog__button{
     width:100%;
     text-align: center;
 }
+
 .catalog__item--more {
     display: flex;
     flex-direction: column;
