--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,37 +1,98 @@
 .example {
     background-color: @bg-grey;
-    padding: 0 20px;
+    @media (min-width: @tablet-width) {
+        background-color:white;
+    }
+    @media (min-width: @desktop-width) {
+        background-color:white;
+    }
 }
 
+.example__caption-wrap {
+    background-color:@bg-grey;
+    @media (min-width: @tablet-width) {
+        background-color:white;
+    }
+}
 
+.example__wrapper {
+    background-color:@bg-grey;
+    width: 280px;
+    .ma;
+    @media (min-width: @tablet-width) {
+        width:708px;
+    }
+    @media (min-width: @desktop-width) {
+        width:1220px;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
+.example__caption {
+    display: block;
+    width: 280px;
+    .ma;
+    @media (min-width: @tablet-width) {
+        width:708px;
+    }
+    @media (min-width: @desktop-width) {
+        width:1220px;
+    }
+    
+}
 .example__list-wrapper{
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    @media (min-width: @tablet-width) {
+        background-color: white;
+    }
+    @media (min-width: @desktop-width) {
+        background-color: @bg-grey;
+    }
 }
-.example__result{
-  display: block;
-  width:124px;
-  height:56px;
-  border:1px solid #cdcdcd;
-  border-radius: 2px;
-  position:relative;
+.example__text-wrap{
+    @media (min-width: @tablet-width) {
+        background-color: white;
+    }
+    @media (min-width: @desktop-width) {
+        background-color: @bg-grey;
+        width:433px;
+    }
+}
+.example__cat-wrap{
+    @media (min-width: @desktop-width) {
+        
+        width:610px;
+    }
+}
+.example__result {
+   display: block;
+   width:124px;
+   height:56px;
+   border:1px solid #cdcdcd;
+   border-radius: 2px;
+   position:relative;
 }
 .example__text{
-    display: block;
-    position:absolute;
-    top:40px;
-    right:20px;
-    background-color: @bg-grey;
-    z-index: 2;
-    width:88px;
-    height:25px;
-}
-.example__money-spent{
-    display: block;
-    margin:0 auto;
-    padding-top:20px;
+     display: block;
+     position:absolute;
+     top:40px;
+     right:20px;
+     background-color: @bg-grey;
+     z-index: 2;
+     width:88px;
+     height:25px;
+     @media (min-width: @tablet-width) {
+       background-color:white;
+    }
+    @media (min-width: @tablet-width) {
+       background-color:@bg-grey;
+    }
 }
 .example__before{ display: block;}
 .example__after { display:none;}
 #pic_sw:checked ~ .example__before{ display: none;}
 #pic_sw:checked ~ .example__after{ display: block;}
+
