--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,29 +1,27 @@
 .page-header {
-    width: 280px;
+    width: 320px;
     margin: 0 auto;
     @media (min-width: @tablet-width) {
-        width: 708px;
+        width: 768px;
         display: flex;
         justify-content: space-between;
   }
 
     @media (min-width:@desktop-width) {
     width: 1220px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
   }
 }
 
 .page-header__wrapper{
     display: flex;
     justify-content: space-between;
+    padding: 0 20px;
 
     @media (min-width: @tablet-width) {
-        min-width: 192px;
+       
     }
 
     @media (min-width: @desktop-width) {
-        min-width: 245px;
+        
     }
 }
