--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -12,9 +12,11 @@
     justify-content: space-between;
     }
     @media (min-width: @desktop-width) {
-    width: 633px;
+    width: 895px;
     min-height: 140px;
     border-bottom: 1px solid #fdfdfd ;
+    display:flex;
+        justify-content: space-between;
     }
 }
 
@@ -28,7 +30,31 @@
     min-height: 40px;
     }
 }
-
+.additional-goods__caption {
+    @media (min-width: @desktop-width) {
+        display:block;
+        width:100%;
+        outline:1px solid black;
+    }
+}
 .additional-goods__caption h3{
     .mp;
+}
+.additional-goods {
+    @media (min-width: @desktop-width) {
+        display: flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
+    }
+}
+.additional-goods__wrapper {
+    @media (min-width: @desktop-width) {
+        display:flex;
+        flex-wrap:wrap;
+    }
+}
+.additional-goods__promo {
+    width:245px;
+    display: block;
+    height: auto;
 }
