--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -6,7 +6,28 @@
     display: flex;
     justify-content: space-between;
     }
-@media (min-width: @tablet-width) {
+@media (min-width: @desktop-width) {
     min-width: 480px;
     }
 }
+
+.main-nav__item a{
+    .medium;
+    .uppercase;
+    .nounderline;
+    .text-black;
+    font-size: 20px;
+    line-height: 20px;
+    @media (min-width: @tablet-width) {
+        .regular;
+        .uppercase;
+        .nounderline;
+        .text-black;
+        font-size: 18px;
+        line-height: 25px;
+    }
+    @media (min-width: @desktop-width) {
+        .text-white;
+        font-size: 20px;
+    }
+} 
