--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -12,3 +12,13 @@
         padding:0 40px;
     }
 }
+.page-catalog__caption {
+    .regular;
+    .text-black;
+    font-size: 36px;
+    line-height: 103px;
+    @media (min-width: @tablet-width) {
+        line-height: 201px;
+        font-size: 60px;
+    }
+}
