--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -17,3 +17,22 @@
     display:flex;
     justify-content: space-between;
 }
+.partnership__invite {
+    .regular;
+    .uppercase;
+    .text-black;
+    font-size: 16px;
+    line-height: 20px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+    }
+}
+.partnership__address {
+    .arial;
+    .text-black;
+    font-size: 14px;
+    line-height: 20px;
+    @media (min-width: @tablet-width) {
+        font-size: 16px;
+    }
+}
