--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -5,3 +5,28 @@
 .ma {
     margin:0 auto;
 }
+.uppercase() {
+    text-transform: uppercase;
+}
+
+.medium() {
+    font-family: 'oswaldmedium', 'Arial', sans-serif ;
+}
+.regular() {
+    font-family: 'oswaldregular', 'Arial', sans-serif ;
+}
+.arial() {
+    font-family: 'Arial', sans-serif ;
+}
+.nounderline() {
+    text-decoration: none;
+}
+.text-white() {
+    color:white;
+}
+.text-black() {
+    color:black;
+}
+.text-gray() {
+    color:@text-gray;
+}
