--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,5 +1,7 @@
 @import 'mixins.less';
 @import 'variables.less';
+@import 'visually-hidden.less';
+@import 'body.less';
 @import 'blocks/additional-goods.less';
 @import 'blocks/catalog.less';
 @import 'blocks/catalog-promo.less';
@@ -25,11 +27,3 @@
 @import 'blocks/targets.less';
 
 
-.visually-hidden {
-  position: absolute;
-
-  width: 1px;
-  height: 1px;
-
-  clip: rect(0, 0, 0, 0);
-}
