--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -1,34 +1,99 @@
+.additional-goods {
+    @media (min-width: @desktop-width) {
+        display: flex;
+        flex-wrap:wrap;
+    }
+}
 .additional-goods__item {
     width: 280px;
-    min-height: 139px;
     border-bottom: 1px solid #fdfdfd ;
+    
     @media (min-width: @tablet-width) {
-    margin:0 auto;
-    width: 633px;
-    min-height: 140px;
-    border-bottom: 1px solid #fdfdfd ;
-    display: flex;
-    flex-wrap:wrap;
-    justify-content: space-between;
+        margin:0 auto;
+        width: 633px;
+        border-bottom: 1px solid #fdfdfd ;
+        display: flex;
+        flex-wrap:wrap;
+        justify-content: space-between;
     }
+    
     @media (min-width: @desktop-width) {
-    width: 633px;
-    min-height: 140px;
-    border-bottom: 1px solid #fdfdfd ;
+        width: 895px;
+        border-bottom: 1px solid #fdfdfd ;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    
     }
 }
 
 .additional-goods__button {
     display: block;
     width:100%;
-    min-height: 25px;
     text-align: center;
+    .regular;
+    .nounderline;
+    .uppercase;
+    .text-white;
+    font-size: 16px;
+    line-height: 40px;
     background-color: @button-green;
     @media (min-width: @tablet-width) {
-    min-height: 40px;
+     width:100%;   
+    }
+    @media (min-width: @desktop-width) {
+        width:245px;
+        height:40px;
+    }
+}
+.additional-goods__caption {
+    width: 100%;
+    .regular;
+    .text-black;
+    .nounderline;
+    .uppercase;
+    font-size: 24px;
+    line-height: 24px;
+    @media (min-width: @tablet-width) {
+        font-size: 36px;
+        line-height: 36px;
+    }
+}
+.additional-goods__name{
+    width: 100%;
+    .regular;
+    .text-black;
+    .nounderline;
+    .uppercase;
+    font-size: 16px;
+    line-height: 16px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+        line-height: 20px;
+    }
+    @media (min-width: @desktop-width) {
+        width:245px;
     }
 }
 
 .additional-goods__caption h3{
     .mp;
+}
+.additional-goods__wrapper {
+    @media (min-width: @desktop-width) {
+        width:100%;
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.additional-goods__promo {
+    width:280px;
+    min-height: 290px;
+    background-image: url(../img/gift-photo-mobile@1x.jpg);
+    background-size: cover;
+}
+.additional-goods__promo-item {
+    .arial;
+    .text-white;
+    font-size: 16;
+    line-height: 20px;
 }
