--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -33,7 +33,12 @@
     display: block;
     width: 280px;
     .ma;
+    .regular;
+    .text-black;
+    font-size: 36px;
+    line-height: 60px;
     @media (min-width: @tablet-width) {
+        font-size: 60px;
         width:708px;
     }
     @media (min-width: @desktop-width) {
@@ -57,6 +62,7 @@
         background-color: white;
     }
     @media (min-width: @desktop-width) {
+        background-color: @bg-grey;
         background-color: @bg-grey;
         width:433px;
     }
@@ -84,8 +90,14 @@
      z-index: 2;
      width:88px;
      height:25px;
+     .arial;
+     .text-black;
+     font-size:12px;
+     line-height: 12px;
      @media (min-width: @tablet-width) {
-       background-color:white;
+        background-color:white;
+        font-size: 14px;
+        line-height: 14px;
     }
     @media (min-width: @tablet-width) {
        background-color:@bg-grey;
@@ -96,3 +108,41 @@
 #pic_sw:checked ~ .example__before{ display: none;}
 #pic_sw:checked ~ .example__after{ display: block;}
 
+.example__description {
+    .arial;
+    .text-black;
+    font-size:14px;
+    line-height: 18px;
+    @media (min-width: @tablet-width) {
+        font-size:16px;
+        line-height: 24px;
+    }
+}
+.example__number {
+    .regular;
+    .text-black;
+    font-size: 24px;
+    line-height: 24px;
+    @media (min-width: @tablet-width) {
+    font-size: 30px;
+    line-height: 37px;
+    }
+}
+.example__money-spent {
+    .regular;
+    .text-black;
+    font-size: 14px;
+    line-height: 20px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+    }
+}
+.example__toggles {
+    .regular;
+    .text-black;
+    font-size:16px;
+    line-height: 20px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+    }
+}
