--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -23,10 +23,16 @@
 .product-description__item{
     min-height: 60px;
     margin-bottom: 20px;
+    .arial;
+    .text-black;
+    font-size: 14px;
+    line-height:18px;
     @media (min-width: @tablet-width) {
         background-color: aqua;
         width:324px;
         min-height: 286px;
+        font-size: 16px;
+        line-height:24px;
     }
     @media (min-width: @desktop-width) {
         .mp;
@@ -49,3 +55,13 @@
         margin-right:0px;
         }
     }
+
+.product-description__caption{
+    .regular;
+    .text-black;
+    font-size: 36px;
+    line-height: 60px;
+    @media (min-width: @tablet-width) {
+        font-size: 60px;
+    }
+}
