--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -23,3 +23,38 @@
       width:570px;
     }
 }
+.targets__title {
+    .regular;
+    .text-black;
+    .uppercase;
+    font-size: 24px;
+    line-height:37px;
+    @media (min-width: @tablet-width) {
+        font-size: 36px;
+        line-height:37px;
+    }
+}
+
+.targets__description{
+    .arial;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    @media (min-width: @tablet-width) {
+       font-size: 16px;
+        line-height: 24px; 
+    }
+}
+.targets__button{
+    display: block;
+    .regular;
+    .text-black;
+    .uppercase;
+    .nounderline;
+    font-size: 16px;
+    line-height: 16px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+        line-height: 20px;
+    }
+}
