--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -31,3 +31,8 @@
         font-size: 20px;
     }
 } 
+.main-nav__item--black a{
+    @media (min-width: @desktop-width) {
+    .text-black;
+    }
+}
