--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -2,19 +2,35 @@
     width: 280px;
     padding:0 20px;
     margin: 0 auto;
-}
-
 @media (min-width: @tablet-width) {
-  .page-form {
     width: 708px;
     padding:0 30px;
     margin: 0 auto;
   }
-}
 @media (min-width:@desktop-width) {
-  .page-form {
     width: 1220px;
     padding:0 40px;
     margin: 0 auto;
   }
+}
+
+.page-form__caption {
+    .regular;
+    .text-black;
+    font-size: 36px;
+    line-height:60px;
+    @media (min-width: @tablet-width) {
+    font-size: 60px;
+    }
+}
+.page-form__description {
+    .regular;
+    .text-black;
+    .uppercase;
+    font-size: 14px;
+    line-height:18px;
+    @media (min-width: @tablet-width) {
+        font-size: 20px;
+        line-height: 30px;
+    }
 }
