--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -14,4 +14,12 @@
 
 .extra__caption {
     width:100%;
+    .regular;
+    .text-black;
+    font-size: 24px;
+    line-height:24px;
+    @media (min-width: @tablet-width) {
+        font-size: 36px;
+        line-height:36px;
+    }
 }
