--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -4,9 +4,19 @@
     @media (min-width: @tablet-width){
         width:631px;
     }
-    @media (min-width: @tablet-width){
+    @media (min-width: @desktop-width){
         width:570px;
         margin:0;
         
+    }
+}
+.form-contacts__caption {
+    .regular;
+    .text-black;
+    font-size: 24px;
+    line-height:24px;
+    @media (min-width: @tablet-width){
+        font-size: 36px;
+        line-height:36px;
     }
 }
