--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,3 +1,7 @@
+.page-footer {
+    background-color:@bg-grey;
+    position: relative;
+}
 .page-footer__wrapper  {
     width: 320px;
     margin: 0 auto;
