--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -1,6 +1,13 @@
 .partnership {
-    width: 280px;
-    margin: 0 auto;
+    background-color: white;
+    }
+.partnership__wrapper{
+    display:flex;
+    justify-content: space-between;
+    width:320px;
+    padding:0 20px;
+    .ma;
+    
     @media (min-width: @tablet-width) {
         width: 708px;
         padding:0 30px;
@@ -10,12 +17,6 @@
         width: 1220px;
         padding:0 40px;
     }
-}
-.partnership__header{
-    .mp;
-    min-height:115px;
-    display:flex;
-    justify-content: space-between;
 }
 .partnership__invite {
     .regular;
