--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,90 +1,83 @@
 .catalog {
-@media (min-width: @tablet-width) {
-    display:flex;
-    flex-wrap: wrap;
-    }
-}
-
-.catalog__item {
-    display:flex;
-    flex-wrap: wrap;
-
-    @media (min-width: @tablet-width) {
-        width:324px;
-        min-height: 530px;
-        flex-direction: column;
-        align-items: center;
-        margin-right:60px;
-        background-color: @bg-grey;
-        margin-bottom: 20px;
-        padding: 0 38px;
-        box-sizing: border-box;
-    }
-    @media (min-width: @desktop-width) {
-        width:245px;
-        min-height: 530px;
-        margin-bottom: 48px;
-        margin-right: 80px;
-    }
-}
-    .catalog__item:nth-child(2n) {
-        @media (min-width: @tablet-width) {
-          margin-right:0;
-        }
-        @media (min-width: @desktop-width) {
-          margin-right:80px;
-        }
-    }
-    .catalog__item:nth-child(4n) {
-        @media (min-width: @desktop-width) {
-        margin-right:0;
-    }
-}
-.catalog__link ,
-.catalog__wrapper {
-    width: 140px;
-}
-
-.catalog__wrapper{
+  @media (min-width:@tablet-width) {
     display: flex;
+    flex-wrap: wrap;
+  }
+}
+.catalog__item {
+  display: flex;
+  flex-wrap: wrap;
+  @media (min-width:@tablet-width) {
+    align-items: center;
+    background-color: @bg-grey;
+    box-sizing: border-box;
     flex-direction: column;
+    margin-bottom: 20px;
+    margin-right: 60px;
+    min-height: 530px;
+    padding: 0 38px;
+    width: 324px;
+  }
+   @media (min-width:@desktop-width) {
+      margin-bottom: 48px;
+      margin-right: 80px;
+      min-height: 530px;
+      width: 245px;
+  }
 }
-.catalog__item h3,
-catalog__table, {
-    .mp;
+.catalog__item:nth-child(2n) {
+  @media (min-width:@tablet-width) {
+    margin-right: 0;
+  }
+  @media (min-width:@desktop-width) {
+    margin-right: 80px;
+  }
 }
-
-.catalog__button{
-    width:100%;
-    text-align: center;
-    .regular;
-    .nounderline;
-    .uppercase;
-    .text-white;
-    font-size: 16px;
-    line-height: 40px;
-    background-color: @button-green;
-    @media (min-width: @tablet-width) {
-    }
+.catalog__item:nth-child(4n) {
+  @media (min-width:@desktop-width) {
+    margin-right: 0;
+  }
 }
-
+.catalog__link, .catalog__wrapper {
+  width: 140px;
+}
+.catalog__wrapper {
+  display: flex;
+  flex-direction: column;
+}
+.catalog__item h3, .catalog__table {
+  .mp;
+}
+.catalog__button {
+  .nounderline;
+  .regular;
+  .text-white;
+  .uppercase;
+  background-color: @button-green;
+  font-size: 16px;
+  line-height: 40px;
+  text-align: center;
+  width: 100%;
+  @media (min-width:@tablet-width) {
+  }
+}
 .catalog__caption {
-    .regular;
-    .text-black;
-    .nounderline;
-    .uppercase;
-    font-size:16px;
-    line-height: 20px;
-    @media (min-width: @tablet-width) {
-        font-size:20px;
-    }
+  .nounderline;
+  .regular;
+  .text-black;
+  .uppercase;
+  font-size: 16px;
+  line-height: 20px;
+  @media (min-width:@tablet-width) {
+    font-size: 20px;
+  }
 }
 .catalog__small {
-    .arial;
-    .text-gray;
-    font-size: 12px;
-    line-height:16px;
-    @media (min-width: @tablet-width) {
-        font-size:16px;
-    }
+  .arial;
+  .text-gray;
+  font-size: 12px;
+  line-height: 16px;
+  @media (min-width:@tablet-width) {
+    font-size: 16px;
+  }
 }
