--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -1,30 +1,32 @@
 .additional-goods {
   @media (min-width: @desktop-width) {
     display: flex;
-    flex-wrap:wrap;
-    }
+    flex-wrap: wrap;
+  }
 }
+
 .additional-goods__item {
   width: 280px;
-  border-bottom: 1px solid #fdfdfd ;
+  border-bottom: 1px solid #fdfdfd;
   @media (min-width: @tablet-width) {
     margin:0 auto;
     width: 633px;
-    border-bottom: 1px solid #fdfdfd ;
+    border-bottom: 1px solid #fdfdfd;
     display: flex;
     flex-wrap:wrap;
     justify-content: space-between;
     }
     @media (min-width: @desktop-width) {
       width: 895px;
-      border-bottom: 1px solid #fdfdfd ;
+      border-bottom: 1px solid #fdfdfd;
       flex-wrap: nowrap;
       justify-content: space-between;
     }
 }
+
 .additional-goods__button {
   display: block;
-  width:100%;
+  width: 100%;
   text-align: center;
   .regular;
   .nounderline;
@@ -34,13 +36,14 @@
   line-height: 40px;
   background-color: @button-green;
   @media (min-width: @tablet-width) {
-      width:100%;
+    width:100%;
   }
   @media (min-width: @desktop-width) {
     width:245px;
     height:40px;
   }
 }
+
 .additional-goods__caption {
   width: 100%;
   .regular;
@@ -53,8 +56,13 @@
     font-size: 36px;
     line-height: 36px;
   }
+  @media (min-width: @desktop-width) {
+    display: block;
+    width: 100%;
+    outline:1px solid black;
+  }
 }
-.additional-goods__name{
+.additional-goods__name {
   width: 100%;
   .regular;
   .text-black;
@@ -67,32 +75,29 @@
     line-height: 20px;
   }
   @media (min-width: @desktop-width) {
-    width:245px;
+    width: 245px;
   }
 }
-.additional-goods__caption {
-    @media (min-width: @desktop-width) {
-        display:block;
-        width:100%;
-        outline:1px solid black;
-    }
+
+.additional-goods__caption h3 {
+  .mp;
 }
-.additional-goods__caption h3{
-    .mp;
-}
+
 .additional-goods__wrapper {
   @media (min-width: @desktop-width) {
-    width:100%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
   }
 }
+
 .additional-goods__promo {
-  width:280px;
+  width: 280px;
   min-height: 290px;
-  background-image: url(../img/gift-photo-mobile@1x.jpg);
+  background-image: url('../img/gift-photo-mobile@1x.jpg');
   background-size: cover;
 }
+
 .additional-goods__promo-item {
   .arial;
   .text-white;
