--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -8,19 +8,21 @@
 .additional-goods__item {
   width: 280px;
   border-bottom: 1px solid #fdfdfd;
+
   @media (min-width: @tablet-width) {
-    margin:0 auto;
+    margin: 0 auto;
     width: 633px;
     border-bottom: 1px solid #fdfdfd;
     display: flex;
-    flex-wrap:wrap;
+    flex-wrap: wrap;
     justify-content: space-between;
-    }
-    @media (min-width: @desktop-width) {
-      width: 895px;
-      border-bottom: 1px solid #fdfdfd;
-      flex-wrap: nowrap;
-      justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 895px;
+    border-bottom: 1px solid #fdfdfd;
+    flex-wrap: nowrap;
+    justify-content: space-between;
     }
 }
 
@@ -35,12 +37,14 @@
   font-size: 16px;
   line-height: 40px;
   background-color: @button-green;
+
   @media (min-width: @tablet-width) {
-    width:100%;
+    width: 100%;
   }
+
   @media (min-width: @desktop-width) {
-    width:245px;
-    height:40px;
+    width: 245px;
+    height: 40px;
   }
 }
 
@@ -52,16 +56,19 @@
   .uppercase;
   font-size: 24px;
   line-height: 24px;
+
   @media (min-width: @tablet-width) {
     font-size: 36px;
     line-height: 36px;
   }
+
   @media (min-width: @desktop-width) {
     display: block;
     width: 100%;
-    outline:1px solid black;
+    outline: 1px solid black;
   }
 }
+
 .additional-goods__name {
   width: 100%;
   .regular;
@@ -70,10 +77,12 @@
   .uppercase;
   font-size: 16px;
   line-height: 16px;
+
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
   }
+
   @media (min-width: @desktop-width) {
     width: 245px;
   }
@@ -94,7 +103,7 @@
 .additional-goods__promo {
   width: 280px;
   min-height: 290px;
-  background-image: url('../img/gift-photo-mobile@1x.jpg');
+  background-image: url("../img/gift-photo-mobile@1x.jpg");
   background-size: cover;
 }
 
