--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -1,5 +1,6 @@
 .catalog {
-  @media (min-width:@tablet-width) {
+
+  @media (min-width: @tablet-width) {
     display: flex;
     flex-wrap: wrap;
   }
@@ -7,6 +8,7 @@
 .catalog__item {
   display: flex;
   flex-wrap: wrap;
+
   @media (min-width:@tablet-width) {
     align-items: center;
     background-color: @bg-grey;
@@ -18,6 +20,7 @@
     padding: 0 38px;
     width: 324px;
   }
+
   @media (min-width:@desktop-width) {
     margin-bottom: 48px;
     margin-right: 80px;
@@ -25,29 +28,37 @@
     width: 245px;
   }
 }
-.catalog__item:nth-child(2n) {
+.catalog__item: nth-child(2n) {
+
   @media (min-width:@tablet-width) {
     margin-right: 0;
   }
+
   @media (min-width:@desktop-width) {
     margin-right: 80px;
   }
 }
-.catalog__item:nth-child(4n) {
+
+.catalog__item: nth-child(4n) {
+
   @media (min-width:@desktop-width) {
     margin-right: 0;
   }
 }
-.catalog__link, .catalog__wrapper {
+.catalog__link,
+.catalog__wrapper {
   width: 140px;
 }
 .catalog__wrapper {
   display: flex;
   flex-direction: column;
 }
-.catalog__item h3, .catalog__table {
+
+.catalog__item h3,
+.catalog__table {
   .mp;
 }
+
 .catalog__button {
   .nounderline;
   .regular;
@@ -58,8 +69,6 @@
   line-height: 40px;
   text-align: center;
   width: 100%;
-  @media (min-width:@tablet-width) {
-  }
 }
 .catalog__caption {
   .nounderline;
@@ -68,16 +77,19 @@
   .uppercase;
   font-size: 16px;
   line-height: 20px;
-  @media (min-width:@tablet-width) {
+
+  @media (min-width: @tablet-width) {
     font-size: 20px;
   }
 }
+
 .catalog__small {
   .arial;
   .text-gray;
   font-size: 12px;
   line-height: 16px;
-  @media (min-width:@tablet-width) {
+
+  @media (min-width: @tablet-width) {
     font-size: 16px;
   }
 }
