--- a/source/less/mixins.less
+++ b/source/less/mixins.less
@@ -1,32 +1,40 @@
 .mp {
-    margin:0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
+
 .ma {
-    margin:0 auto;
+  margin: 0 auto;
 }
+
 .uppercase() {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .medium() {
-    font-family: 'oswaldmedium', 'Arial', sans-serif ;
+  font-family: "oswaldmedium", "Arial", sans-serif ;
 }
+
 .regular() {
-    font-family: 'oswaldregular', 'Arial', sans-serif ;
+  font-family: "oswaldregular", "Arial", sans-serif ;
 }
+
 .arial() {
-    font-family: 'Arial', sans-serif ;
+  font-family: "Arial", sans-serif ;
 }
+
 .nounderline() {
-    text-decoration: none;
+  text-decoration: none;
 }
+
 .text-white() {
-    color:white;
+  color: white;
 }
+
 .text-black() {
-    color:black;
+  color: black;
 }
+
 .text-gray() {
-    color:@text-gray;
+  color: @text-gray;
 }
