--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,91 +1,104 @@
 .promo {
-    width: 100%;
-    background:rgb(104, 172, 63);
-    @media (min-width: @tablet-width) {
-        background:#ffffff;
-    }
-    @media (min-width: @desktop-width) {
-        background: linear-gradient(to right,rgb(255, 255, 255) 0%,rgb(255, 255, 255) 50%,rgb(104, 172, 63) 49.9%,rgb(104, 172, 63) 100%);
-    }
+  width: 100%;
+  background: rgb(104, 172, 63);
+
+  @media (min-width: @tablet-width) {
+    background:#ffffff;
+  }
+
+  @media (min-width: @desktop-width) {
+    background: linear-gradient(to right,rgb(255, 255, 255) 0%,rgb(255, 255, 255) 50%,rgb(104, 172, 63) 49.9%,rgb(104, 172, 63) 100%);
+  }
 }
+
 .promo__wrapper {
-    margin: 0 auto;
-    width:280px;
-    min-height: 305px;
-    background-image: url(../img/index-background-mobile.jpg);
-    background-repeat: no-repeat;
-    margin-bottom: 197px;
-    position:relative;
-    @media (min-width: @tablet-width) {
-        background-image: url(../img/index-can-tablet.jpg);
-        width: 708px;
-        height: 609px;
-        margin-top: 50px;
-    }
-    @media (min-width: @desktop-width) {
-        width:1440px;
-        background-image: url(../img/index-desktop.jpg);
-        background-position:50% 0;
-        min-height: 696px;
-    }
-}
-.promo__wrapper::before{
-    position: absolute;
-    content: "";
-    width: 280px;
-    height: 271px;
-    background-image: url(../img/index-can-mobile.png);
-    margin-top: 200px;
-    @media (min-width: @tablet-width) {
-        background-image:none;
-        width:0;
-        height:0;
-    }
-    @media (min-width: @desktop-width) {
-        background-image: url(../img/index-can-desktop.png);
-        width: 552px;
-        height: 499px;
-        margin-top:150px;
-        margin-left:550px;
-    }
-}
-.promo__caption{
-    .regular;
-    .text-white;
-    font-size: 36px;
-    line-height: 36px;
-    @media (min-width: @tablet-width) {
-        font-size: 60px;
-        line-height: 60px;
-        .text-black;
+  margin: 0 auto;
+  width: 280px;
+  min-height: 305px;
+  background-image: url("../img/index-background-mobile.jpg");
+  background-repeat: no-repeat;
+  margin-bottom: 197px;
+  position:relative;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../img/index-can-tablet.jpg");
+    width: 708px;
+    height: 609px;
+    margin-top: 50px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1440px;
+    background-image: url("../img/index-desktop.jpg");
+    background-position: 50% 0;
+    min-height: 696px;
     }
 }
 
-.promo__slogan{
-    .regular;
-    .text-white;
-    font-size: 14px;
-    line-height: 14px;
-    @media (min-width: @tablet-width) {
-        .text-black;
-        font-size: 20px;
-        line-height: 20px;
-    }
+.promo__wrapper::before {
+  position: absolute;
+  content: "";
+  width: 280px;
+  height: 271px;
+  background-image: url("../img/index-can-mobile.png");
+  margin-top: 200px;
+
+  @media (min-width: @tablet-width) {
+    background-image:none;
+    width: 0;
+    height: 0;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../img/index-can-desktop.png");
+    width: 552px;
+    height: 499px;
+    margin-top: 150px;
+    margin-left: 550px;
+  }
 }
+
+.promo__caption {
+  .regular;
+  .text-white;
+  font-size: 36px;
+  line-height: 36px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 60px;
+    line-height: 60px;
+    .text-black;
+  }
+}
+
+.promo__slogan {
+  .regular;
+  .text-white;
+  font-size: 14px;
+  line-height: 14px;
+
+  @media (min-width: @tablet-width) {
+    .text-black;
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
 .promo__button {
-    .regular;
-    .uppercase;
-    .text-white;
-    .nounderline;
-    font-size: 14px;
-    line-height: 40px;
-    width: 100%;
-    display: block;
-    text-align: center;
-    background-color: @button-green;
-    @media (min-width: @tablet-width) {
-        width:245px;
-        line-height: 52px;
-        font-size: 20px;
-    }
+  .regular;
+  .uppercase;
+  .text-white;
+  .nounderline;
+  font-size: 14px;
+  line-height: 40px;
+  width: 100%;
+  display: block;
+  text-align: center;
+  background-color: @button-green;
+
+  @media (min-width: @tablet-width) {
+    width:245px;
+    line-height: 52px;
+    font-size: 20px;
+  }
 }
