--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,11 @@
 .social {
-    margin:0 auto;
-    width:150px;
-    display:flex;
-    justify-content: space-between;
+  .ma;
+  width: 150px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .social__link {
-    width:50px;
-    height:50px;
+  width: 50px;
+  height: 50px;
 }
