--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,9 +1,9 @@
 .page-footer {
-  background-color:@bg-grey;
+  background-color: @bg-grey;
   position: relative;
 }
 
-.page-footer__wrapper  {
+.page-footer__wrapper {
   width: 320px;
   margin: 0 auto;
 
@@ -12,7 +12,7 @@
     padding: 0 30px;
   }
 
-  @media (min-width:@desktop-width) {
+  @media (min-width: @desktop-width) {
     width: 1220px;
     padding: 0 40px;
   }
@@ -22,23 +22,23 @@
   width: 100vw;
 }
 
-.page-footer__wrapper{
+.page-footer__wrapper {
   display: block;
 
   @media (min-width: @tablet-width) {
-    display:flex;
+    display: flex;
     justify-content: space-between;
   }
 }
 
-.page-footer__logo{
+.page-footer__logo {
   width: 130px;
   height: 26px;
 }
 
-.page-footer__logo{
+.page-footer__logo {
   display: block;
-  margin:0 auto;
+  .ma;
   height: 25px;
   width: 129px;
 }
