--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -3,7 +3,7 @@
 
   @media (min-width: @tablet-width) {
     padding: 0 30px;
-    }
+  }
 
   @media (min-width: @desktop-width) {
     padding: 0 110px;
@@ -37,7 +37,7 @@
     width: 324px;
     min-height: 286px;
     font-size: 16px;
-    line-height:24px;
+    line-height: 24px;
   }
 
   @media (min-width: @desktop-width) {
@@ -61,7 +61,7 @@
 
 .product-description__item:nth-child(4n) {
   @media (min-width: @desktop-width) {
-    margin-right: 0px;
+    margin-right: 0;
   }
 }
 
