--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -61,9 +61,9 @@
 }
 
 .catalog__button {
-  .nounderline;
+  text-decoration: none;
   .regular;
-  .text-white;
+  color: white;
   .uppercase;
   background-color: @button-green;
   font-size: 16px;
@@ -73,9 +73,9 @@
 }
 
 .catalog__caption {
-  .nounderline;
+  text-decoration: none;
   .regular;
-  .text-black;
+  color: black;
   .uppercase;
   font-size: 16px;
   line-height: 20px;
@@ -87,7 +87,7 @@
 
 .catalog__small {
   .arial;
-  .text-gray;
+  color: @text-gray;
   font-size: 12px;
   line-height: 16px;
 
