--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -18,7 +18,7 @@
 
 .page-form__caption {
   .regular;
-  .text-black;
+  color: black;
   font-size: 36px;
   line-height: 60px;
 
@@ -29,7 +29,7 @@
 
 .page-form__description {
   .regular;
-  .text-black;
+  color: black;
   .uppercase;
   font-size: 14px;
   line-height: 18px;
