--- a/source/less/blocks/partnership.less
+++ b/source/less/blocks/partnership.less
@@ -23,7 +23,7 @@
 .partnership__invite {
   .regular;
   .uppercase;
-  .text-black;
+  color: black;
   font-size: 16px;
   line-height: 20px;
 
@@ -34,7 +34,7 @@
 
 .partnership__address {
   .arial;
-  .text-black;
+  color: black;
   font-size: 14px;
   line-height: 20px;
 
