--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -14,7 +14,7 @@
   flex-wrap: wrap;
   .regular;
   .uppercase;
-  .text-black;
+  color: black;
   font-size: 16px;
   line-height: 18px;
 
@@ -40,7 +40,7 @@
 
 .selection__caption {
   .regular;
-  .text-black;
+  color: black;
   font-size: 24px;
   line-height: 24px;
 
@@ -56,7 +56,7 @@
   border: none;
   .regular;
   .uppercase;
-  .text-white;
+  color: white;
   font-size: 16px;
   line-height: 40px;
 
@@ -69,7 +69,7 @@
 
 .selection__notice {
   .arial;
-  .text-gray;
+  color: @text-gray;
   font-size: 14px;
   line-height: 16px;
 
