--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,27 +1,27 @@
-@import 'mixins.less';
-@import 'variables.less';
-@import 'visually-hidden.less';
-@import 'body.less';
-@import 'blocks/additional-goods.less';
-@import 'blocks/catalog.less';
-@import 'blocks/catalog-promo.less';
-@import 'blocks/developers.less';
-@import 'blocks/example.less';
-@import 'blocks/extra.less';
-@import 'blocks/form-cat-info.less';
-@import 'blocks/form-contacts.less';
-@import 'blocks/form-targets.less';
-@import 'blocks/page-catalog.less';
-@import 'blocks/page-footer.less';
-@import 'blocks/page-form.less';
-@import 'blocks/page-header.less';
-@import 'blocks/page-main.less';
-@import 'blocks/partnership.less';
-@import 'blocks/main-nav.less';
-@import 'blocks/product-description.less';
-@import 'blocks/promo.less';
-@import 'blocks/result-item.less';
-@import 'blocks/selection.less';
-@import 'blocks/social.less';
-@import 'blocks/table.less';
-@import 'blocks/targets.less';
+@import "mixins.less";
+@import "variables.less";
+@import "visually-hidden.less";
+@import "body.less";
+@import "blocks/additional-goods.less";
+@import "blocks/catalog.less";
+@import "blocks/catalog-promo.less";
+@import "blocks/developers.less";
+@import "blocks/example.less";
+@import "blocks/extra.less";
+@import "blocks/form-cat-info.less";
+@import "blocks/form-contacts.less";
+@import "blocks/form-targets.less";
+@import "blocks/page-catalog.less";
+@import "blocks/page-footer.less";
+@import "blocks/page-form.less";
+@import "blocks/page-header.less";
+@import "blocks/page-main.less";
+@import "blocks/partnership.less";
+@import "blocks/main-nav.less";
+@import "blocks/product-description.less";
+@import "blocks/promo.less";
+@import "blocks/result-item.less";
+@import "blocks/selection.less";
+@import "blocks/social.less";
+@import "blocks/table.less";
+@import "blocks/targets.less";
