--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -31,9 +31,9 @@
   width: 100%;
   text-align: center;
   .regular;
-  .nounderline;
+  text-decoration: none;
   .uppercase;
-  .text-white;
+  color: white;
   font-size: 16px;
   line-height: 40px;
   background-color: @button-green;
@@ -51,8 +51,8 @@
 .additional-goods__caption {
   width: 100%;
   .regular;
-  .text-black;
-  .nounderline;
+  color: black;
+  text-decoration: none;
   .uppercase;
   font-size: 24px;
   line-height: 24px;
@@ -72,8 +72,8 @@
 .additional-goods__name {
   width: 100%;
   .regular;
-  .text-black;
-  .nounderline;
+  color: black;
+  text-decoration: none;
   .uppercase;
   font-size: 16px;
   line-height: 16px;
@@ -109,7 +109,7 @@
 
 .additional-goods__promo-item {
   .arial;
-  .text-white;
+  color: white;
   font-size: 16;
   line-height: 20px;
 }
