--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -43,7 +43,7 @@
   width: 280px;
   .ma;
   .regular;
-  .text-black;
+  color: black;
   font-size: 36px;
   line-height: 60px;
 
@@ -107,7 +107,7 @@
   width: 88px;
   height: 25px;
   .arial;
-  .text-black;
+  color: black;
   font-size: 12px;
   line-height: 12px;
 
@@ -130,17 +130,17 @@
   display: none;
 }
 
-.pic_sw:checked ~ .example__before {
+.example_switch:checked ~ .example__before {
   display: none;
 }
 
-.pic_sw:checked ~ .example__after {
+.example_switch:checked ~ .example__after {
   display: block;
 }
 
 .example__description {
   .arial;
-  .text-black;
+  color: black;
   font-size: 14px;
   line-height: 18px;
 
@@ -152,7 +152,7 @@
 
 .example__number {
   .regular;
-  .text-black;
+  color: black;
   font-size: 24px;
   line-height: 24px;
 
@@ -164,7 +164,7 @@
 
 .example__money-spent {
   .regular;
-  .text-black;
+  color: black;
   font-size: 14px;
   line-height: 20px;
 
@@ -175,7 +175,7 @@
 
 .example__toggles {
   .regular;
-  .text-black;
+  color: black;
   font-size: 16px;
   line-height: 20px;
 
