--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -28,7 +28,7 @@
   min-height: 60px;
   margin-bottom: 20px;
   .arial;
-  .text-black;
+  color: black;
   font-size: 14px;
   line-height: 18px;
 
@@ -67,7 +67,7 @@
 
 .product-description__caption {
   .regular;
-  .text-black;
+  color: black;
   font-size: 36px;
   line-height: 60px;
 
