--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -60,25 +60,25 @@
 
 .promo__caption {
   .regular;
-  .text-white;
+  color: white;
   font-size: 36px;
   line-height: 36px;
 
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
-    .text-black;
+    color: black;
   }
 }
 
 .promo__slogan {
   .regular;
-  .text-white;
+  color: white;
   font-size: 14px;
   line-height: 14px;
 
   @media (min-width: @tablet-width) {
-    .text-black;
+    color: black;
     font-size: 20px;
     line-height: 20px;
   }
@@ -87,8 +87,8 @@
 .promo__button {
   .regular;
   .uppercase;
-  .text-white;
-  .nounderline;
+  color: white;
+  text-decoration: none;
   font-size: 14px;
   line-height: 40px;
   width: 100%;
