--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -29,7 +29,7 @@
 
 .targets__title {
   .regular;
-  .text-black;
+  color: black;
   .uppercase;
   font-size: 24px;
   line-height: 37px;
@@ -55,9 +55,9 @@
 .targets__button {
   display: block;
   .regular;
-  .text-black;
+  color: black;
   .uppercase;
-  .nounderline;
+  text-decoration: none;
   font-size: 16px;
   line-height: 16px;
 
