--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -33,7 +33,7 @@
   line-height: 18px;
 
   @media (min-width: @tablet-width) {
-    background-color: aqua;
+    background-color: @bg-grey;
     width: 324px;
     min-height: 286px;
     font-size: 16px;
@@ -45,17 +45,6 @@
     width: 245px;
     min-height: 228px;
     margin-right: 80px;
-  }
-}
-
-.product-description__item:nth-child(1),
-.product-description__item:nth-child(2) {
-  @media (min-width: @tablet-width) {
-    margin-bottom: 30px;
-  }
-
-  @media (min-width: @desktop-width) {
-    margin-bottom: 0;
   }
 }
 
