--- a/source/less/blocks/targets.less
+++ b/source/less/blocks/targets.less
@@ -60,9 +60,22 @@
   text-decoration: none;
   font-size: 16px;
   line-height: 16px;
-
+  background-image: url("../img/icon-right-arrow-long.svg");
+  background-repeat: no-repeat;
+  background-position: 90px 0;
   @media (min-width: @tablet-width) {
     font-size: 20px;
     line-height: 20px;
   }
+}
+.targets__title--slim {
+  background-image: url("../img/icon-slim-mobile.png");
+  width: 50px;
+  height: 53px;
+}
+
+.targets__title--mass {
+  background-image: url("../img/icon-mass-mobile.png");
+  width: 67px;
+  height: 50px;
 }
